infrastructure/polyfea/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: polyfea-controller
  namespace: polyfea
spec:
  parentRefs:
  - name: wac-hospital-gateway
    namespace: wac-hospital
  - name: wac-hospital-gateway
    namespace: wac-hospital-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /fea
    backendRefs:
    - group: ""
      kind: Service
      name: polyfea-controller
      port: 80
  - matches:
    - path:
        type: Exact
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /fea
